altereções na página de agenda. foi inserido um banner

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -80,42 +80,7 @@
         
     </div>
 
-     <!-- FOOTER -->
-     <footer class="page-footer" id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">HIGH PERFORMANCE</h5>
-                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <ul>
-                        <li><a class="white-text text-lighten-3" href="#">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="/home">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
-                    </ul>
-                </div>
-                <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left"
-                        data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container white-text">
-                © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
-                    LogoMakr.com</a>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Mascarar telefone -->
-
-
-    <!-- <script src="../../js/maskTel.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script> -->
-
+     
+    <%- include('partials/rodape') %>
     <%- include('partials/footer') %>
    
