--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -22,8 +22,8 @@
                         </div>
                     </a>
                 </li>
-                <li><a href="/home/alunos" class="orange-text">Alunos</a></li>
-                <li><a href="/home" class="black-text">Crie</a></li>
+                <li><a href="/home/agenda" class="black-text">Agenda</a></li>
+                <li><a href="/home/alunos" class="orange-text">Alunos</a></li>                
                 <li><a href="/home/financas" class="black-text">Finanças</a></li>
                 <li><a href="/logout" class="black-text">Sair</a></li>
             </ul>
@@ -58,14 +58,13 @@
             <a class="black-text" href="#">
                 <div class="responsive-img">
                     <!-- <img class="responsive-img" src=""> -->
-                    <b><%= user.img %></b>
                     <b><%= user.nome %></b>
                 </div>
             </a>
             <hr>
         </li>
-        <li><a href="#" class="orange-text">Alunos</a></li>
-        <li><a href="/home" class="black-text">Crie</a></li>
+        <li><a href="/home/agenda" class="black-text">Agenda</a></li>
+        <li><a href="#" class="orange-text">Alunos</a></li>        
         <li><a href="/home/financas" class="black-text">Finanças</a></li>
         <li><a href="/logout" class="black-text">Sair</a></li>
     </ul>
