--- a/views/partials/headIndex.ejs
+++ b/views/partials/headIndex.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="apple-touch-icon" href="img/icon-192x192.png">
-    <link rel=”canonical” href="https://highperformance.herokuapp.com"/>
+    <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
     <link rel="manifest" href="/manifest.json">
     <script>
         if ('serviceWorker' in navigator) {
