--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -22,6 +22,8 @@
                         </div>
                     </a>
                 </li>
+                <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+                <li><a href="/home/agenda" class="black-text">Agenda</a></li>
                 <li><a href="/home/financas" class="black-text">Finanças</a></li>
                 <li><a href="/logout" class="black-text">Sair</a></li>
             </ul>
@@ -61,6 +63,8 @@
             </a>
             <hr>
         </li>
+        <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+        <li><a href="/home/agenda" class="black-text">Agenda</a></li>
         <li><a href="/home/financas" class="black-text">Finanças</a></li>
         <li><a href="/logout" class="black-text">Sair</a></li>
     </ul>
