--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -6,7 +6,7 @@
 
     <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %>
-
+ 
     <!-- Alunos -->
     <div class="container">
         <div class="col s12 m12 l12 quadrado">
@@ -21,10 +21,10 @@
         <div class="container" id="lista">
             <div class="col s12 m12 l12 left-align">        
                 <div class="nav-wrapper">
-                    <form>                        
+                    <form action="/busca" method="get">                        
                         <div class="input-field">
-                            <input id="search" type="search" required placeholder="Pesquisar Alunos">
-                            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                            <input id="search" type="text" name="q" placeholder="Pesquisar Alunos" autocomplete="off">
+                            <button type="submit" class="label-icon" for="search"><i class="material-icons">search</i> Buscar</button>
                             <!-- <i class="material-icons">close</i> -->
                         </div>
                     </form>
@@ -34,6 +34,7 @@
 
         <br/>
         <!-- Lista dos alunos -->
+        
         <div class="col s12 m12 l12">
             <table class="highlight centered table" id="tabledata">
                 <thead>
@@ -44,21 +45,16 @@
                         <th>Meta</th>
                     </tr>
                 </thead>
-
+                
                 <tbody>
+                    <% for (aluno of alunos) { %>
                     <tr data-url="/home/treino">
-                        <td><img src="/img/avatar.png" alt="Foto José"></td>
-                        <td>José</td>
-                        <td>0800545145</td>
+                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>"></td>
+                        <td><%= aluno.nome %></td>
+                        <td><%= aluno.telefone %></td>
                         <td>32 km</td>
                     </tr>
-
-                    <tr data-url="../treino/treino.html">
-                        <td><img src="/img/avatar.png" alt="Foto José"></td>
-                        <td>José</td>
-                        <td>0800545145</td>
-                        <td>32 km</td>
-                    </tr>
+                    <% } %>
                 </tbody>
             </table>
         </div>
