Alterando imagem da bike

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m6 l7">
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
-            <p class="right-align">O site High Performance é voltado para educadores físicos que desejam gerenciar dados do alunos que usam o aplicativo de monitoramento Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
+            <p class="right-align">O site High Performance é voltado para educadores físicos que desejam gerenciar dados dos seus alunos de uma maneira simples. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
             </p>
             <a href="/sobre">Saber mais</a>
         </div>
@@ -82,7 +82,7 @@
             </svg>
 
             <h4 class="center-align">FICHA DOS ALUNOS</h4>
-            <p class="center-align">Tenha uma ficha completa dos seus alunos com integração na API do Strava.</p>
+            <p class="center-align">Tenha uma ficha completa dos seus alunos.</p>
         </div>
     </div>
 
