--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -11,7 +11,7 @@
     <div id="sobre">
         <div class="row">
             <div class="col s12 m12 l6">
-                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do seus alunos que estão utilizando o aplicativo <img src="/img/strava.png" alt="">, marcar aulas, ter um gestão dos seus pagamentos, lista de presença, entre outros.
+                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do seus alunos, marcar aulas, ter um gestão dos seus pagamentos, lista de presença, entre outros.
                     Tudo isso apenas em um só lugar.
                 </p>
             </div>
