--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,12 @@
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
-            <!-- <a href="/">
-                <img class="responsive-img logo" src="/img/logo.png" alt="High Performance">
-            </a> -->
+            <% if(menssage != '') { %>
+                
+                       <div class="card-panel teal lighten-2" style="color: white;font-size: 17px;"><%- menssage%></div>
+                   
+               
+               <% } %>
             <h1>Faça seu Login</h1>
 
             <form id="form" action="/login" method="POST">
