arrumando editar aluno

--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -33,7 +33,7 @@
                             <P>Sexo: Masculino</P>
                             <p>Data Nasc: 29/03/1997</p>
                             <p>
-                                <a href="../EditarAluno/editarAluno.html" class="black-text"><i class="material-icons">create</i>Editar dados</a>
+                                <a href="/home/alunos/editar" class="black-text"><i class="material-icons">create</i>Editar dados</a>
                             </p>
                             <p><a href="#" class="black-text"><i class="material-icons">delete</i>Remover aluno</a></p>
                         </div>
