--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -1,6 +1,6 @@
         <%- include('partials/header') %>
         <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
-        <link rel="stylesheet" href="../EditarAluno/editarAluno.css">
+        <link rel="stylesheet" href="/css/editarAluno.css">
     </head>
 <body>
     
@@ -10,7 +10,7 @@
     <div class="aluno">
         <div class="container" id="aluno">
             <div class="col s12 m12 l12 center-align">
-                <img src="../../img/avatar.png" alt="avatar do aluno" class="responsive-img">
+                <img src="/../img/avatar.png" alt="avatar do aluno" class="responsive-img">
             </div>
 
             <div class="col s12 m12 l6">
