Cadastro nova aula

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m12 l12 baixoQuadrado">
             <i class="material-icons">person_add</i>
-            <a id="addAluno" href="/cadastrarAlunos">ADICIONAR NOVO ALUNO</a>          
+            <a id="addAluno" href="/home/cadastrarAlunos">ADICIONAR NOVO ALUNO</a>          
         </div>
 
         <!-- INICIO DA LISTA -->
