--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -15,7 +15,7 @@
                 <h1>Cadastrar novo aluno</h1>
             </div>
             <div class="col s12 m12 l6">
-                <form class="formValidate" id="formValidate" method="POST" action="../alunos/alunos.html">
+                <form class="formValidate" id="formValidate" method="POST" action="/home/cadastrarAlunos">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
@@ -41,8 +41,7 @@
                         <div class="errorTxt4 right-align"></div>
                     </div>
                     <div class="input-field">
-                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar
-                      </button>
+                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar</button>
                     </div>
                 </form>
             </div>
