--- a/views/novaAula.ejs
+++ b/views/novaAula.ejs
@@ -19,29 +19,29 @@
             <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
                 <input name="name" id="name" type="text" data-error=".errorTxt1">
-                <label for="name">Nome</label>
+                <label for="name">Aula</label>
                 <div class="errorTxt1 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">email</i>
                 <input name="email" id="email" type="email" data-error=".errorTxt2">
-                <label for="email">E-mail</label>
+                <label for="email">Meta</label>
                 <div class="errorTxt2 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">call</i>
                 <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
-                <label for="tel">Celular</label>
+                <label for="tel">Aluno</label>
                 <div class="errorTxt3 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">date_range</i>
                 <input name="data" type="date" class="form-control" data-error=".errorTxt4">
-                <label for="date">Data Nasc.</label>
+                <label for="date">Data</label>
                 <div class="errorTxt4 right-align"></div>
             </div>
             <div class="input-field">
-                <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar
+                <button class="btn waves-effect waves-light right submit" type="submit" name="action">CRIAR
               </button>
             </div>
         </form>
