--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <div class="col s12 m11 l5" id="login">
             <% if(menssage != '') { %>
                 
-                       <div class="card-panel teal lighten-2" style="color: white;font-size: 17px;"><%- menssage%></div>
+                       <div class="card-panel " style="color: red;font-size: 18px;text-align: center;border: 1px solid red;border-radius: 15px;font-weight: bold;padding: 10px;background: transparent;"><%- menssage%></div>
                    
                
                <% } %>
