--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -19,7 +19,8 @@
 
         <!-- INICIO DA LISTA -->
         <div class="container" id="lista">
-            <div class="col s12 m12 l12 left-align">        
+            <div class="row">
+            <div class="col s6 m6 l6 left-align">        
                 <div class="nav-wrapper">
                     <form action="/busca" method="get">                        
                         <div class="input-field">
@@ -31,6 +32,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <br/>
         <!-- Lista dos alunos -->
@@ -48,11 +50,11 @@
                 
                 <tbody>
                     <% for (aluno of alunos) { %>
-                    <tr data-url="/home/treino">
-                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>"></td>
+                    <tr data-url="/home/treino/<%= aluno.id %>">
+                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>" width="100" height="115"></td>
                         <td><%= aluno.nome %></td>
                         <td><%= aluno.telefone %></td>
-                        <td>32 km</td>
+                        <td><%= aluno.meta%> km</td>
                     </tr>
                     <% } %>
                 </tbody>
