--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -16,10 +16,19 @@
             </div>
             <div class="col s12 m12 l6">
                 <form class="formValidate" id="formValidate" method="POST" action="/home/cadastrarAlunos">
+                    <div class="file-field input-field">
+                        <div class="btn">
+                          <span>File</span>
+                          <input name="img"type="file">
+                        </div>
+                        <div class="file-path-wrapper">
+                          <input name="img" class="file-path validate" type="text">
+                        </div>
+                      </div>
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input name="name" id="name" type="text" data-error=".errorTxt1">
-                        <label for="name">Nome</label>
+                        <input name="nome" id="nome" type="text" data-error=".errorTxt1">
+                        <label for="nome">Nome</label>
                         <div class="errorTxt1 right-align "></div>
                     </div>
                     <div class="input-field">
@@ -30,18 +39,18 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
-                        <label for="tel">Celular</label>
+                        <input name="telefone" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
+                        <label for="telefone">Celular</label>
                         <div class="errorTxt3 right-align "></div>
                     </div>
                     <div class="input-field">
-                        <i class="material-icons prefix">date_range</i>
-                        <input name="data" type="date" class="form-control" data-error=".errorTxt4">
-                        <label for="date">Data Nasc.</label>
+                        <i class="material-icons prefix">directions_run</i>
+                        <input name="meta" type="text" class="form-control" data-error=".errorTxt4">
+                        <label for="meta">Meta</label>
                         <div class="errorTxt4 right-align"></div>
                     </div>
                     <div class="input-field">
-                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar</button>
+                        <button class="btn waves-effect waves-light right submit" type="submit" name="action" id="btnSubmit">Cadastrar</button>
                     </div>
                 </form>
             </div>
