Implementando editar alunos

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -1,6 +1,6 @@
         <%- include('partials/header') %>
         <link rel="stylesheet" href="/css/alunos.css">
-        <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/alunos/alunos.html" />
+        <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
     </head>
 <body>
 
@@ -77,5 +77,6 @@
         </div>       
         
     </div>
+    
     <%- include('partials/footer') %>
    
