--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -1,9 +1,9 @@
         <%- include('partials/header') %>
-        <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
+        <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
         <link rel="stylesheet" href="/css/cadastroAlunos.css">
     </head>
 <body>
-    
+    <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %> 
 
     <div class="cadastro">
