--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -1,11 +1,12 @@
-        <%- include('partials/header') %>
+<%- include('partials/header') %>
         <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
         <link rel="stylesheet" href="/css/editarAluno.css">
     </head>
 <body>
     
-    <%- include('partials/navBar') %>
-    <%- include('partials/bikeGif') %>
+    
+<%- include('partials/navBar') %>
+<%- include('partials/bikeGif') %> 
 
     <div class="aluno">
         <div class="container" id="aluno">
@@ -14,36 +15,36 @@
             </div>
 
             <div class="col s12 m12 l6">
-                <form id="form" id="form" method="POST" action="../alunos/alunos.html">
+                <form id="form" id="form" action="/home/alunos/editar/<%= aluno.id %>?_method=PUT" method="post">
                     <form id="form" id="form" method="GET" action="/alunos">
                         <div class="input-field">
                             <i class="material-icons prefix">account_circle</i>
-                            <input name="name" id="name" type="text" data-error=".errorTxt1" placeholder="<%= aluno.nome %>">
-                            <label for="name">Nome</label>
+                            <input name="nome" id="name" type="text" data-error=".errorTxt1" value="<%= aluno.nome %>">
+                            <label for="nome">Nome</label>
                             <div class="errorTxt1 right-align"></div>
                         </div>
                         <div class="input-field">
                             <i class="material-icons prefix">email</i>
-                            <input name="email" id="email" type="email" data-error=".errorTxt2">
+                            <input name="email" id="email" type="email" data-error=".errorTxt2" value="<%= aluno.email %>">
                             <label for="email">E-mail</label>
                             <div class="errorTxt2 right-align"></div>
                         </div>
                         <div class="input-field">
                             <i class="material-icons prefix">call</i>
-                            <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
-                            <label for="cel">Celular</label>
+                            <input name="telefone" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3" value="<%= aluno.telefone %>">
+                            <label for="telefone">Celular</label>
                             <div class="errorTxt3 right-align"></div>
                         </div>
                         <div class="input-field">
-                            <i class="material-icons prefix">date_range</i>
-                            <input name="date" id="date" type="date" class="form-control" data-error=".errorTxt4">
-                            <label for="password">Data Nasc.</label>
+                            <i class="material-icons prefix">directions_run</i>
+                            <input name="meta" type="text" class="form-control" data-error=".errorTxt4" value="<%= aluno.meta %>">
+                            <label for="meta">Meta</label>
                             <div class="errorTxt4 right-align"></div>
                         </div>
                         <div class="row">
                             <div class="col s12 m6 l6">
                                 <div class="input-field">
-                                    <a href="/alunos">
+                                    <a href="/home/alunos">
                                         <span class="btn waves-effect waves-light">
                                      Cancelar
                                     </span>
@@ -52,7 +53,7 @@
                             </div>
                             <div class="col s12 m6 l6">
                                 <div class="input-field">
-                                    <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
+                                    <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Salvar</button>
                                 </div>
                             </div>
                         </div>
@@ -62,4 +63,4 @@
     </div>
 
 
-    <%- include('partials/footer') %>
+    <%- include('partials/footer') %>>
