--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -11,7 +11,7 @@
         <div id="perfil">
             <div class="row">
                 <div class="col s12 m6 l3">
-                    <img src="<%= aluno.img %>" alt="">
+                    <img src="<%= aluno.img %>" alt="" width="100" height="115">
                 </div>
 
                 <div class="col s12 m6 l9 left-align">
