--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -17,8 +17,8 @@
             <div class="col s12 m12 l6">
                 <form class="formValidate" id="formValidate" method="POST" action="/home/cadastrarAlunos">
                     <div class="file-field input-field">
-                        <div class="btn">
-                          <span>File</span>
+                        <div class="btn orange">
+                          <span>Imagem</span>
                           <input name="img"type="file">
                         </div>
                         <div class="file-path-wrapper">
@@ -58,3 +58,4 @@
     </div>
 
     <%- include('partials/footer') %>
+    <%- include('partials/rodape') %>
