--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -128,4 +128,6 @@
     <script src="/js/finacas.js"></script>
 
     <%- include('partials/footer') %>
+    <%- include('partials/rodape') %>
+
     
