--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -20,12 +20,11 @@
         <!-- INICIO DA LISTA -->
         <div class="container" id="lista">
             <div class="row">
-            <div class="col s6 m6 l6 left-align">        
+            <div class="col s12 m12 l12 left-align">        
                 <div class="nav-wrapper">
-                    <form action="/busca" method="get">                        
+                    <form action="/busca" method="get" id="formBuscaAluno">                        
                         <div class="input-field">
                             <input id="search" type="text" name="q" placeholder="Pesquisar Alunos" autocomplete="off">
-                            <button type="submit" class="label-icon" for="search"><i class="material-icons">search</i> Buscar</button>
                             <!-- <i class="material-icons">close</i> -->
                         </div>
                     </form>
@@ -51,7 +50,7 @@
                 <tbody>
                     <% for (aluno of alunos) { %>
                     <tr data-url="/home/treino/<%= aluno.id %>">
-                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>" width="100" height="115"></td>
+                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>" width="130" height="130"></td>
                         <td><%= aluno.nome %></td>
                         <td><%= aluno.telefone %></td>
                         <td><%= aluno.meta%> km</td>
@@ -79,4 +78,5 @@
     </div>
     
     <%- include('partials/footer') %>
+    <%- include('partials/rodape') %>
    
