--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -16,7 +16,7 @@
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>               
             </div>
 
-            <div class="col s12 m12 l7">
+            <div class="col s12 m12 l7" id="formCadastro">
                 <form id="form" action="/cadastro" method="POST">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input name="cel" attrname="telephone1" type="tel" id="cel" data-error=".errorTxt3">
+                        <input name="cel" type="tel" id="tel" data-error=".errorTxt3">
                         <label for="cel">Celular</label>
                         <div class="errorTxt3 right-align "></div>
                     </div>
