--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,7 +49,7 @@
         </div>
 
         <div class="col s12 m l7">
-            <img class="responsive-img bannerimg" src="/img/login.png" alt="Banner Login">
+            <img class="responsive-img bannerimg" src="/img/login.png" alt="Banner Login" id="imgLogin">
         </div>
     </div>
 
