--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -18,17 +18,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/loader.js"></script>
+    <script src="/js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="../../js/messages_pt_BR.js"></script>
-    <script src="../../js/formCadastroAluno.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formCadastroAluno.js"></script>
 
     <!-- Mascarar telefone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="../../js/maskTel.js"></script>
+    <script src="/js/maskTel.js"></script>
 
 **************************************************************************** cadstrar alunos
 
@@ -61,17 +61,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/loader.js"></script>
+    <script src="/js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="../../js/messages_pt_BR.js"></script>
-    <script src="../../js/formEditarAluno.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formEditarAluno.js"></script>
 
     <!-- Mascarar telefone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="../../js/maskTel.js"></script>
+    <script src="/js/maskTel.js"></script>
 
 **************************************************************************** editar alunos
 
