--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -3,7 +3,7 @@
         <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
     </head>
 <body>
-
+XXXXXXX
     <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %>
  
