--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -5,7 +5,7 @@
 <body>
     <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %>
- 
+XXXXX 
     <!-- Alunos -->
     <div class="container">
         <div class="col s12 m12 l12 quadrado" style="margin-bottom: 0;">
