--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -5,6 +5,7 @@
 <body>
     <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %>
+XXXXX
 XXXXX 
     <!-- Alunos -->
     <div class="container">
