--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -8,13 +8,30 @@
  
     <!-- Alunos -->
     <div class="container">
-        <div class="col s12 m12 l12 quadrado" style="margin-bottom: 0;">
+        <div class="col s12 m12 l12 quadrado">
             <div id="alunos"><h2>Alunos ativos</h2></div>                                    
         </div>
+        <div class="col s12 m12 l12 baixoQuadrado">
+            <i class="material-icons">person_add</i>
+            <a id="addAluno" href="/home/cadastrarAlunos">ADICIONAR NOVO ALUNO</a>          
+        </div>
 
+        <!-- INICIO DA LISTA -->
+        <div class="container" id="lista">
+            <div class="row">
+            <div class="col s6 m6 l6 left-align">        
+                <div class="nav-wrapper">
+                    <form action="/busca" method="get">                        
+                        <div class="input-field">
+                            <input id="search" type="text" name="q" placeholder="Pesquisar Alunos" autocomplete="off">
+                            <button type="submit" class="label-icon" for="search"><i class="material-icons">search</i> Buscar</button>
+                            <!-- <i class="material-icons">close</i> -->
+                        </div>
+                    </form>
                 </div>
             </div>
-        
+        </div>
+    </div>
 
         <br/>
         <!-- Lista dos alunos -->
@@ -33,7 +50,7 @@
                 <tbody>
                     <% for (aluno of alunos) { %>
                     <tr data-url="/home/treino/<%= aluno.id %>">
-
+                        <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto <%= aluno.nome %>" width="100" height="115"></td>
                         <td><%= aluno.nome %></td>
                         <td><%= aluno.telefone %></td>
                         <td><%= aluno.meta%> km</td>
