--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,6 +7,6 @@
 <%- include('partials/navBar') %>
 <%- include('partials/bikeGif') %>
 
-<img class="responsive-img" src="/img/404.png" alt="Erro 404" id="erro">
+<img src="404.png" alt="Erro 404">
 
 <%- include('partials/footer') %>
