--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -31,9 +31,7 @@
                             <p>
                                 <a href="/home/alunos/editar/<%=aluno.id%>" class="black-text"><i class="material-icons">create</i>Editar dados</a>
                             </p>
-                            <form action="/home/alunos/<%=aluno.id%>?_method=DELETE" method="post">
-                                <button class="btn red" type="submit">Excluir aluno</button>
-                            </form>
+                            <p><a href="#" class="black-text"><i class="material-icons">delete</i>Remover aluno</a></p>
                         </div>
                     </li>
                 </ul>
@@ -67,7 +65,36 @@
         </div>
     </div>
 
+    <!-- FOOTER -->
+    <footer class="page-footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <ul>
+                        <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="/home">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
+                        <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
+                    </ul>
+                </div>
+                <div class="col l1 s4 right">
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container white-text">
+                © 2020 High Performance Copyright
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+            </div>
+        </div>
+    </footer>
+
+
     <script src="../../js/treino.js"></script>
     
     <%- include('partials/footer') %>
-    <%- include('partials/rodape') %>
