--- a/public/css/crie.css
+++ b/public/css/crie.css
@@ -77,12 +77,9 @@ i.material-icons {
     }
 }
 
-#aulas {
-    height: 70vh;
-}
-
 .aulasContainer {
     margin-top: 30px;
+    margin-bottom: 80px;
 }
 
 #calendario {
