--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -28,7 +28,7 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input name="telefone" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
+                        <input name="telefone" type="tel" id="tel" data-error=".errorTxt3">
                         <label for="telefone">Celular</label>
                         <div class="errorTxt3 right-align "></div>
                     </div>
