--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -34,7 +34,7 @@
                             </div>
                             <div class="collapsible-body"><span>
                             <div class="col s12 m12 l12">
-                                <table class="highlight centered table responsive-table" id="tabledata">
+                                <table class="highlight centered table" id="tabledata">
                                     <thead>
                                         <tr>
                                             <th id="marginTh">Imagem</th>
@@ -74,4 +74,8 @@
                 </div>
                 <% } %>
 </div>
+</div>
+</div>
+
     <%- include('partials/footer') %>
+    <%- include('partials/rodape') %>
