--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -31,7 +31,7 @@
                         </div>
                         <div class="input-field">
                             <i class="material-icons prefix">call</i>
-                            <input name="telefone" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3" value="<%= aluno.telefone %>">
+                            <input name="telefone" type="tel" id="tel" data-error=".errorTxt3" value="<%= aluno.telefone %>">
                             <label for="telefone">Celular</label>
                             <div class="errorTxt3 right-align"></div>
                         </div>
@@ -39,6 +39,12 @@
                             <i class="material-icons prefix">directions_run</i>
                             <input name="meta" type="text" class="form-control" data-error=".errorTxt4" value="<%= aluno.meta %>">
                             <label for="meta">Meta</label>
+                            <div class="errorTxt4 right-align"></div>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">directions_run</i>
+                            <input name="metaFeita" type="text" class="form-control" data-error=".errorTxt4" value="<%= aluno.metaFeita%>">
+                            <label for="metaFeita">Meta Restante</label>
                             <div class="errorTxt4 right-align"></div>
                         </div>
                         <div class="row">
